src/styles/resume.styl
.resume
    background-color #1F1F1F
    min-height 100vh

    .main
        height 100%
        width 700px
        background-color #FFFFFF
        padding 0 25px
        margin 0 auto

        header
            padding-bottom 15px
            border-bottom 2px solid #DDDDDD

            .page-title
                margin 1rem 0

            .page-subhead
                margin 1rem 0

            .fa
                padding-right 10px

        .indented
            padding-left 40px

        .category-row
            padding-bottom 2px

            .category
                margin-right 10px
                padding-left 5px
                padding-right 10px
                border-bottom 1px solid #DDDDDD
                border-right 1px solid #DDDDDD

            .category-row-title
                margin .7rem 0

            .category-title
                display inline

            .category-subtitle
                display inline

            p, li
                font-size smaller

            .no-bottom
                border-bottom 0
                padding-bottom 0
                margin-bottom 0

